--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,17 +1,30 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>{{nome}}</ion-title>
+    <ion-title>Mandy</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p> 
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+
+<ion-list>
+
+  <ion-item>
+    <ion-input placeholder="Login" type="text"  [(ngModel)]="usuario.nome"  ></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-input  placeholder="Senha" type="password"  [(ngModel)]="usuario.senha"   ></ion-input>
+  </ion-item>
+
+
+    <button ion-button full class="button button-light"  (click)="logar()" >
+      Entrar
+    </button>
+
+  <ion-item>
+    {{usuario}}
+  </ion-item>
+
+</ion-list>
+
 </ion-content>
